src/objects/Course__c.object
<CustomObject>
    <description>used to store data about Monash offerings</description>
    <fields>
        <fullName>ACAD_Year__c</fullName>
        <label>ACAD Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <label>Admission Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Australian_Accreditation__c</fullName>
        <label>Australian Accreditation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Broad_Area_Of_Study__c</fullName>
        <description>this field has a trigger associated with it, that replaces the standard field for import \n with ; so it complies with format required.</description>
        <label>Broad Area of Study</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Broad_Area_of_Study_Import_Field__c</fullName>
        <description>this field is used for import mapping - trigger will then convert into the multi-select picklist field.</description>
        <label>Broad Area of Study Import Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRICOS__c</fullName>
        <label>CRICOS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Career_Outlook__c</fullName>
        <label>Career Outlook</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Used to force uniqueness on course code. Updated from workflow.</description>
        <externalId>true</externalId>
        <label>Course Code Unique</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <externalId>true</externalId>
        <label>Course Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Level__c</fullName>
        <formula>if ( CONTAINS (Course_Description__c, &quot;Bachelor&quot;) , &quot;UG&quot; , 
if ( CONTAINS (Course_Description__c, &quot;Master&quot;), &quot;PG&quot;, 
if ( TEXT(Managing_Faculty__c) = &quot;PPA&quot;, &quot;Monash College - Non Award&quot;,&quot;Unknown&quot; 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depreciated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, then the course is no longer offered. This field is used to filter what is available from the &apos;Add Interest&apos; action on enquiry.</description>
        <label>Depreciated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Faculty_Code__c</fullName>
        <label>Faculty Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Description__c</fullName>
        <externalId>true</externalId>
        <label>Faculty Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Accreditation__c</fullName>
        <label>International Accreditation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <label>Managing Faculty</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Art, Design &amp; Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Business &amp; Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Medicine, Nursing &amp; Health Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Pharmacy &amp; Pharmaceutical Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty of Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash Injury Research Institute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monash University Foundation Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mapped_Browse_Categories__c</fullName>
        <description>this is populated by apex trigger, which looks at browse category to area of study map sobject.</description>
        <label>Mapped Browse Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mapped_Categories__c</fullName>
        <description>this is used to migrate long text field info over to a multiselect post import so we can use it in dynamic soql queries.</description>
        <label>Mapped Categories</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mode_and_Location__c</fullName>
        <label>Mode and Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_ID__c</fullName>
        <externalId>true</externalId>
        <label>Original ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Marketing_Description__c</fullName>
        <label>Short Marketing Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Specialisation_Code__c</fullName>
        <label>Specialisation Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialisation__c</fullName>
        <externalId>true</externalId>
        <label>Specialisation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_Course_Duration__c</fullName>
        <label>Course Duration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Code__c</columns>
        <columns>Course_Description__c</columns>
        <columns>Specialisation__c</columns>
        <columns>Faculty_Code__c</columns>
        <columns>Broad_Area_Of_Study__c</columns>
        <columns>Original_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Course Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>